--- a/13Feb2022/index.html
+++ b/13Feb2022/index.html
@@ -4,12 +4,12 @@
         <title>Tribute to Lata Mangeshkar Ji</title>
         <style>
             #header{
-              background-color: rgb(51, 138, 90);
+              background-color: grey;
                 height:100px;
                 margin-bottom: 10px;
             }
             #footer{
-                background-color: rgb(51, 138, 90);
+                background-color: grey;
                 height:100%;
             }
         </style>
@@ -18,7 +18,7 @@
         <div id="header">
             <h1 style="font-family: 'Times New Roman', Times, serif;text-align: center;"><b><i>Lata Mangeshkar Ji</i></b></h1>
             <h3 style="text-align: center;">
-            <span style="color: blue;">(Queen of Melody)</span></h3>
+            <span style="color: white;">(Queen of Melody)</span></h3>
         </div>
             <center>
             <img src="https://i2.cinestaan.com/image-bank/1500-1500/166001-167000/166041.jpg" alt="Lata Ji" style="text-align: center; width: 550px; height: 400px;">
