--- a/13Feb2022/index.html
+++ b/13Feb2022/index.html
@@ -58,8 +58,13 @@
                 </li><br>
                 <li>On 8 January 2022, Lata Mangeshkar tested positive for COVID-19 with mild symptoms and was admitted to Breach Candy Hospital's intensive care unit in Mumbai. She remained in the ICU with signs of "marginal improvement" in her health. The doctors treating her had taken her off the ventilator on 28 January after her health "improved marginally"; however, she was back on the ventilator on 5 February, after her health deteriorated, and was undergoing "aggressive therapy".
 
-                    Mangeshkar died from multiple organ dysfunction syndrome on 6 February 2022, at the age of 92. She had undergone 28 days of constant treatment for pneumonia and COVID-19</li>
+                    Mangeshkar died from multiple organ dysfunction syndrome on 6 February 2022, at the age of 92. She had undergone 28 days of constant treatment for pneumonia and COVID-19.</li>
             </ul>
+            <p style="text-align: center;color: white; >As a singer, you have to bring the soul to the song.
+</p>
+ 
+              
+            <h4 style="text-align: center;color: white;>Lata Mangeshkar </h4>
             <h5 style="text-align: center;">For further details:-</h5>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
