--- a/13Feb2022/index.html
+++ b/13Feb2022/index.html
@@ -7,10 +7,12 @@
               background-color: grey;
                 height:100px;
                 margin-bottom: 10px;
+                color:white;
             }
             #footer{
                 background-color: grey;
                 height:100%;
+                color:white;
             }
         </style>
     </head>
@@ -60,8 +62,7 @@
 
                     Mangeshkar died from multiple organ dysfunction syndrome on 6 February 2022, at the age of 92. She had undergone 28 days of constant treatment for pneumonia and COVID-19.</li>
             </ul>
-            <p style="text-align: center;color: white; >As a singer, you have to bring the soul to the song.
-</p>
+            <p style="text-align: center;color: white; >As a singer, you have to bring the soul to the song.</p>
  
               
             <h4 style="text-align: center;color: white;>Lata Mangeshkar </h4>
